WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96458
[chromium] Flip Y and swizzle inside compositeAndReadback implementation
https://bugs.webkit.org/show_bug.cgi?id=96458
Summary
[chromium] Flip Y and swizzle inside compositeAndReadback implementation
Alexandre Elias
Reported
2012-09-11 19:16:12 PDT
[chromium] Flip Y and swizzle inside compositeAndReadback implementation
Attachments
Patch
(7.08 KB, patch)
2012-09-11 19:23 PDT
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
Patch
(7.10 KB, patch)
2012-09-11 23:37 PDT
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexandre Elias
Comment 1
2012-09-11 19:23:44 PDT
Created
attachment 163497
[details]
Patch
Dana Jansens
Comment 2
2012-09-11 23:21:26 PDT
How come this doesn't require changing DumpRenderTree (since it does flipping too?)
Alexandre Elias
Comment 3
2012-09-11 23:28:05 PDT
DumpRenderTree uses the WebViewImpl call; I have been testing this change by running DumpRenderTree.
James Robinson
Comment 4
2012-09-11 23:29:28 PDT
Comment on
attachment 163497
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=163497&action=review
DumpRenderTree uses WebViewImpl, so the total # of flips / swizzles should be the same for the GL path in DRT.
> Source/WebCore/platform/graphics/chromium/cc/CCRendererGL.cpp:1177 > + int rowBytes = rect.width() * 4;
size_t would be marginally more consistent with other code that does byte addressing (overflow isn't a realistic concern here, but consistency is still nice)
Dana Jansens
Comment 5
2012-09-11 23:31:25 PDT
(In reply to
comment #3
)
> DumpRenderTree uses the WebViewImpl call; I have been testing this change by running DumpRenderTree.
Ah I see, I thought it had some other flip in TestShell somewheres.. guess not! Thanks :)
Alexandre Elias
Comment 6
2012-09-11 23:37:29 PDT
Created
attachment 163525
[details]
Patch Switched types to size_t
WebKit Review Bot
Comment 7
2012-09-11 23:40:04 PDT
Comment on
attachment 163525
[details]
Patch Rejecting
attachment 163525
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13822632
WebKit Review Bot
Comment 8
2012-09-12 00:01:39 PDT
Comment on
attachment 163525
[details]
Patch Clearing flags on attachment: 163525 Committed
r128269
: <
http://trac.webkit.org/changeset/128269
>
WebKit Review Bot
Comment 9
2012-09-12 00:01:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug