[chromium] Flip Y and swizzle inside compositeAndReadback implementation https://bugs.webkit.org/show_bug.cgi?id=96458

Reviewed by James Robinson.

Currently, compositeAndReadback API assumes a GL-style texture
and is converted to the normal software format in WebViewImpl.
For the software implementation, this API would result in two
redundant conversions.  This patch makes the conversion inside
CCRendererGL instead.  I rolled my own for loop as I didn't find the
appropriate function within raw Skia.

No new tests (covered by existing layout tests).

Source/WebCore:

* platform/graphics/chromium/cc/CCRendererGL.cpp:
(WebCore::CCRendererGL::getFramebufferPixels):

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::doPixelReadbackToCanvas):


Canonical link: https://commits.webkit.org/114361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128269 268f45cc-cd09-0410-ab3c-d52691b4dbfc